--- a/docs/SCMA470Bookdownproj.tex
+++ b/docs/SCMA470Bookdownproj.tex
@@ -128,7 +128,7 @@
 
 \title{SCMA470 Risk Analysis and Credibility}
 \author{Pairote Satiracoo}
-\date{2021-09-07}
+\date{2021-09-14}
 
 \usepackage{amsthm}
 \newtheorem{theorem}{Theorem}[chapter]
@@ -1818,7 +1818,7 @@ The distribution of \(Z\) can be derived as follows:
   For \(x =0\), \[F_Z(0) = \Pr(Z = 0) = \Pr(X \le M) = F_X(M).\]
 \item
   For \(x > 0\), \[\begin{aligned}
-      F_Z(0) &= \Pr(Z \le x) = \Pr(\max(0,X-M) \le x) \\
+      F_Z(x) &= \Pr(Z \le x) = \Pr(\max(0,X-M) \le x) \\
       &= \Pr(X- M \le x) = \Pr(X \le x + M) = F_X(x + M).\end{aligned}\]
 \end{itemize}
 
@@ -1961,6 +1961,623 @@ distribution function of \(Y\) is given by \[\Pr(Y \le x) = F(x/a).\]
 Hence, the density function is \[f_Y(x) = \frac{1}{a}f(x/a).\]
 
 You can get more examples from Tutorials.
+
+\hypertarget{collective-risk-model}{%
+\chapter{Collective Risk Model}\label{collective-risk-model}}
+
+Mathematical models of the total amount of claims from a portfolio of
+policies over a short period of time will be presented in this chapter.
+The models are referred to as short term risk models. Two main sources
+of uncertainty including the claim numbers and claim sizes will be taken
+into consideration. We will begin with the model for aggregate (total)
+claims or collective risk models.
+
+We define the following random variables:
+
+\begin{itemize}
+\item
+  \(S\) denotes total amount of claims from a portfolio of policies in a
+  fixed time interval, for e.g.~one year,
+\item
+  \(N\) represents the number of claims, and
+\item
+  \(X_i\) denotes the amount of the \(i\)th claim.
+\end{itemize}
+
+Then the total claims \(S\) is given by \[S = X_1 + \ldots + X_N.\]
+
+The following assumptions are made for deriving the collective risk
+model:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  \(\{X_i \}_{i=1}^\infty\) are independent and identically distributed
+  with distribution function \(F_X\).
+\item
+  \(N\) is independent of \(\{X_i \}_{i=1}^\infty\).
+\end{enumerate}
+
+The distribution of the total claim \(S\) is said to be a compound
+distribution. The properties of the compound distribution will be given
+in the Section \protect\hyperlink{sectionCompoundDistribution}{2}.
+
+\textbf{Note} The distribution of \(S\) can be derived by using convolution
+technique. In general, the closed form expressions for the compound
+distribution do not exist so we will mainly concern with the moments of
+\(S\). For more details about convolution, see Gray and Pitts (2012).
+
+\hypertarget{conditional-expectation-and-variance-formulas}{%
+\section{Conditional expectation and variance formulas}\label{conditional-expectation-and-variance-formulas}}
+
+Some useful properties of conditional expectation and conditional
+variance are given. The conditional expectaion formula is
+
+\[E[ E[X|Y ]] = E[X].\] The conditional variance of \(X\) given \(Y\) is
+defined to be
+\[\begin{split}
+    Var[X|Y]   &= Var[Z] \text{ where } Z = X|Y  \\
+            &= E[(Z - E[Z])^2] = E[Z^2] - (E[Z])^2 \\
+            &= E[(X - E[X|Y])^2  | Y] \\
+            &= E[X^2| Y] - (E[X|Y])^2. \\
+\end{split}\]
+The conditional variance formula is
+\begin{equation} 
+\label{eq:exampleVariance}
+    Var[X] = E[ Var[X|Y ]] + Var[E[X|Y ]].
+\end{equation}
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-39}{}\label{exm:unlabeled-div-39}
+
+Show that \[Var[X] = E[ Var[X|Y ]] + Var[E[X|Y ]].\]
+
+\end{example}
+
+\textbf{Solution:}
+
+Consider the terms on the right-hand side of \eqref{eq:exampleVariance}. We have
+
+\[\begin{aligned}
+    E[Var[X|Y]] &= E\left[  E[X^2|Y] -  (E[X|Y])^2   \right] \\
+        &=  E[X^2] - E\left[(E[X|Y])^2   \right],
+    \end{aligned}\] and
+\[\begin{aligned}
+    Var[E[X|Y ]]  &= Var[Z] \text{ where } Z = E[X|Y ]  \\
+                &= E[(E[X|Y ])^2] - (E[E[X|Y ]])^2 \\
+                &= E[(E[X|Y ])^2] - (E[X])^2 \\
+                \end{aligned}\] Adding
+both terms gives the required result.
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-40}{}\label{exm:unlabeled-div-40}
+
+In three coloured boxes - Red, Green and Blue, each box has two bags.
+The bags of Red box contain and respectively, those of Green box contain
+and , and those of Blue contain and . A box is chosen at random in such
+a way that
+\(\Pr(\text{Red}) = \Pr(\text{Green}) = \Pr(\text{Blue}) = 1/3\). A fair
+coin is tossed to determined which bag to be chosen from the chosen box.
+Let \(X\) be the value of the contents of the chosen bag.
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Find the distribution of \(X\).
+\item
+  Find \(E[X]\) and \(Var[X]\).
+\item
+  Use the conditional expectation and conditional variance formulas to
+  verify your results.
+\end{enumerate}
+
+\end{example}
+
+\textbf{Solution:}
+1. The distribution of \(X\) can be obtained by using the law of total
+probability: for example \[\begin{aligned}
+        P(X= 1) &= P(X = 1 , R) + P(X = 1 , G) + P(X = 1 , B) \\ 
+        &= P(X = 1 | R) \cdot P(R) + P(X = 1 | G) \cdot P(G) + P(X = 1 | B) \cdot P(B) \\
+        &= \frac{1}{2} \cdot  \frac{1}{3} + \frac{1}{2} \cdot  \frac{1}{3} + \frac{1}{2} \cdot  \frac{1}{3} = \frac{1}{2}.
+        \end{aligned}\]
+Similarly, we have
+\[P(X = 1 ) = \frac{1}{2}, \quad P(X = 2 ) =  P(X = 5 ) =  P(X = 10 ) =  \frac{1}{6}.\]
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\item
+  It follows that
+  \[E[X] = \frac{10}{3}, \quad Var[X] = \frac{98}{9}.\]
+\item
+  We first calculate \[\begin{aligned}
+      E[X|R] &= \frac{1}{2}\cdot(1 + 2) = \frac{3}{2} \\
+      E[X|G] &= \frac{1}{2}\cdot(1 + 5) = 3 \\
+      E[X|B] &= \frac{1}{2}\cdot(1 + 10) = \frac{11}{2}. \\  \end{aligned}\]
+  We have \[\begin{aligned}
+      E[X] &= E[X | R] \cdot P(R) + E[X | G] \cdot P(G)  + E[X | B] \cdot P(B)  \\
+      &= \frac{1}{3}\cdot(\frac{3}{2}  + 3 + \frac{11}{2}) = \frac{10}{3}.  \end{aligned}\]
+\end{enumerate}
+
+\hypertarget{sectionCompoundDistribution}{%
+\section{\texorpdfstring{The moments of a compound distribution \(S\)}{The moments of a compound distribution S}}\label{sectionCompoundDistribution}}
+
+The moments and moment generating function of \(S\) can be easily derived
+from the conditional expectation formula.
+
+\hypertarget{the-mean-of-s}{%
+\subsection{\texorpdfstring{The mean of \(S\)}{The mean of S}}\label{the-mean-of-s}}
+
+Let \(m_k\) be the \(k\)th moment of \(X_1\), i.e.~\(E[X_1^k] = m_k\).
+Conditional on \(N = n\), we have
+\[E[S | N = n] = E[ \sum_{i=1}^n X_i] = \sum_{i=1}^n E[ X_i] = n E[ X_i] = n \cdot m_1.\]
+Hence, \(E[S | N] = N m_1\) and
+\[E[S] =   E[E[S | N]] = E[N m_1] = E[N] m_1 = E[N] \cdot E[X_1].\]
+It is no surprise that the mean of the total claims is the product of
+the means of the number of claims and the mean of claim sizes.
+
+\hypertarget{the-variance-of-s}{%
+\subsection{\texorpdfstring{The variance of \(S\)}{The variance of S}}\label{the-variance-of-s}}
+
+Using the fact that \(\{X_i \}_{i=1}^\infty\) are independent, we have
+\[Var[S | N = n] = Var[ \sum_{i=1}^n X_i] = \sum_{i=1}^n Var[ X_i] = n Var[ X_i]  =n (m_2 - m_1^2),\]
+and \(Var[S | N] = N (m_2 - m_1^2).\) It follows that \[\begin{aligned}
+    Var[S] &= E[ Var[S | N] ] + Var[ E[S | N] ] \\
+           &= E[ N (m_2 - m_1^2) ] + Var[ N m_1 ] \\
+           &= E[ N ]  (m_2 - m_1^2)  +  Var[ N ] m_1  ^2. \end{aligned}\]
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-41}{}\label{exm:unlabeled-div-41}
+
+Show that \(M_S(t) = M_N(\log(M_X(t)))\).
+
+\end{example}
+
+\textbf{Solution:}
+
+First, consider the following conditional expectation: \[\begin{aligned}
+    E\left [e^{t S} | N = n \right] &= E\left[e^{t (X_1 + X_2 + \cdots X_n)}\right] \\
+                 &= E\left[e^{t X_1}\right]  \cdot E\left[e^{t X_2}\right]  \cdots E\left[e^{t X_n}\right]  \text{, since } X_1, X_2 \ldots, X_n \text{ are independent} \\ 
+                 &= (M_X(t))^n.\end{aligned}\] Hence
+\(E \left [e^{t S} | N \right] = (M_X(t))^N.\)
+
+From the definition of the moment generating function, \[\begin{aligned}
+    M_S(t) &= E[e^{t S}] \\
+        &= E \left[  E[e^{t S} | N] \right ] \\
+        &= E \left[ (M_X(t))^N  \right ]\\
+        &= E \left[  Exp( N \cdot \log (M_X(t) )    \right] \\
+        &= M_N(\log(M_X(t)))   (\text{ since } M_X(t) = E[e^{tX}] ).\end{aligned}\]
+
+\hypertarget{special-compound-distributions}{%
+\section{Special compound distributions}\label{special-compound-distributions}}
+
+\hypertarget{compound-poisson-distributions}{%
+\subsection{Compound Poisson distributions}\label{compound-poisson-distributions}}
+
+Let \(N\) be a Poisson distribution with the parameter \(\lambda\), i.e.
+\(N \sim Poisson(\lambda)\) and \(\{X_i \}_{i=1}^\infty\) are independent and
+identically distributed with distribution function \(F_X\). Then
+\(S = X_1 + \ldots + X_N\) is said to have a compound Poisson distribution
+and denote by \(\mathcal{CP}(\lambda,F_X)\).
+
+\textbf{Note} The same terminology can be defined similarly for other
+distributions, for e.g.~if \(N\) has a negative binomial distribution,
+then \(S\) is said to have a compound negative binomial distribution.
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-42}{}\label{exm:unlabeled-div-42}
+
+Let \(S \sim \mathcal{CP}(\lambda,F_X)\). Show that
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  \(E[S] = \lambda m_1\),
+\item
+  \(Var[S] = \lambda m_2\),
+\item
+  \(M_S(t) = Exp{(\lambda(M_X(t) - 1))}.\)
+\item
+  The third central moment \(E[(S- E[S])^3] = \lambda m_3\), and hence
+  \[Sk[S] = \frac{\lambda m_3}{(\lambda m_2)^{3/2}},\]
+\end{enumerate}
+
+where \(m_k\) be the \(k\)th moment of \(X_1\)
+
+\end{example}
+
+\textbf{Solution:}
+1. \(E[S] = E[N] \cdot E[X] = \lambda m_1\),
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\item
+  \(Var[S] = E[ N ] (m_2 - m_1^2) + Var[ N ] m_1 ^2 =  \lambda(m_2 - m_1^2) + \lambda m_1^2 = \lambda m_2\),
+\item
+  From \[\begin{aligned}
+          M_S(t) &=  M_N(\log(M_X(t))) \\
+              &= Exp\left( \lambda  \left( e^{\log(M_X(t))} - 1   \right)  \right), \text{ since } M_N(t) = Exp(\lambda(e^t - 1))  \\
+              &= Exp{(\lambda(M_X(t) - 1))}.
+      \end{aligned}\]
+\item
+  The third central moment \(E[(S- E[S])^3] = \lambda m_3\), and hence
+  \[Sk[S] = \frac{\lambda m_3}{(\lambda m_2)^{3/2}}.\] In particular,
+  we have \[\begin{aligned}
+      E[(N- E[N])^3] &= E\left [  N^3 - 3 N^2  \cdot E[N] + 3 N \cdot  (E[N])^2 - (E[N])^3       \right]  \\
+          &= E[N^3] - 3 E[N^2]  \cdot E[N] + 2 (E[N])^3 \\
+          &= M_N'''(0) - 3  M_N''(0) \cdot  M_N'(0) + 2 (M_N'(0))^3\end{aligned}\]
+
+  For \(N \sim Poisson(\lambda)\), \(M_N(t) = Exp(\lambda(e^t - 1)).\) By
+  differentiating \(M_N(t)\) and evaluating at \(t = 0\), we can show that
+  \[M'(0) = \lambda, \quad  M''(0) = \lambda (1 + \lambda), \quad M'''(0) = \lambda (1 + 3\lambda + \lambda^2).\]
+  Hence, \(E[(N- E[N])^3] = \lambda.\)
+
+  Similarly,
+
+  \[\begin{aligned}
+      E[(S- E[S])^3] &=  E[S^3] - 3 E[S^2]  \cdot E[S] + 2 (E[S])^3 \\
+    \end{aligned}\]
+  In addition, \(M_S(t) = Exp{(\lambda(M_X(t) - 1))}.\) By
+  differentiating \(M_S(t)\) we can show that \[\begin{aligned}
+      M'''_S(t) &= \lambda M'''_X(t) M_S(t)   + 2 \lambda M''_X(t) M'_S(t)  + \lambda M'_X(t) M''_S(t).\\ \end{aligned}\]
+  Evaluating \(M'''_S(t)\) at \(t = 0\) results in \[\begin{aligned}
+      M'''_S(0) &= E[S^3] = \lambda m_3 + 3 E[S] \cdot E[S^2] - 2( E[S])^3,\end{aligned}\]
+  which gives \[\begin{aligned}
+      E[(S- E[S])^3] &=  E[S^3] - 3 E[S^2]  \cdot E[S] + 2 (E[S])^3 \\
+          &= \lambda m_3.\end{aligned}\]
+\end{enumerate}
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-43}{}\label{exm:unlabeled-div-43}
+
+Let \(S\) be the aggregate annual claims for a risk where
+\(S \sim \mathcal{CP}(10,F_X)\) and the individual claim amounts have a
+\(Pa(4,1)\) distribution. Calculate \(E[S], Var[S]\) and \(Sk[S]\).
+
+\end{example}
+
+\textbf{Solution:}
+Since \(X \sim Pa(4,1)\) with \(\alpha = 4\) and \(\lambda = 1\), we
+have \[\begin{aligned}
+E[X^r] &= \frac{\Gamma(\alpha - r) \cdot \Gamma(1 + r) \cdot \lambda^r  }{\Gamma(\alpha)}\\
+E[X] &= \frac{\lambda}{\alpha - 1} = \frac{1}{4-1} = \frac{1}{3}\\
+E[X^2] &=  \frac{\Gamma(2) \cdot \Gamma(3) \cdot \lambda^2  }{\Gamma(4)} = \frac{1}{3}\\ 
+E[X^3] &=  \frac{\Gamma(1) \cdot \Gamma(4) \cdot \lambda^3  }{\Gamma(4)} = 1.\\ \end{aligned}\]
+We have \[\begin{aligned}
+E[S]  &= \lambda E[X] = \frac{10}{3} \\
+Var[S] &= \lambda E[X^2] = \frac{10}{3} \\
+Sk[S] &= \frac{\lambda E[X^3]}{\left(\lambda E[X^2]\right)^{3/2}} = \frac{10}{(10/3)^{3/2}} = 1.6432.\\ \end{aligned}\]\\
+An important property of independent, but not necessarily identically
+distributed, compound Poisson random variables is that the sum of a
+fixed number of them is also a compound Poisson random variable.
+
+\begin{example}
+\protect\hypertarget{exm:Additivity}{}\label{exm:Additivity}
+
+Let \(S_1, \ldots, S_n\)
+be independent compound Poisson random variables, with parameters
+\(\lambda_i\) and \(F_i\). Then \(S = \sum_{i=1}^n S_i\) has a compound
+distribution with parameter \[\lambda =  \sum_{i=1}^n \lambda_i,\] and
+\[F = \frac{1}{\lambda}\sum_{i=1}^n \lambda_i F_i.\]
+
+\end{example}
+
+\textbf{Solution:}
+Exercise.
+
+\textbf{Note} The compound Poisson distribution is the most often used in
+practice. It possesses the additivity of independent compound Poisson
+distributions (as shown in
+Example \ref{exm:Additivity}, and the expressions of the first three moments
+are very simple.
+
+\hypertarget{compound-negative-binomial-distributions}{%
+\subsection{Compound negative binomial distributions}\label{compound-negative-binomial-distributions}}
+
+A useful discrete random variable that can be used for modelling the
+distributions of claim numbers is a negative binomial distribution. A
+random variable \(N\) has a negative distribution with parameters \(k\) and
+\(p\), denoted by \(N \sim NB(k,p)\) if its probability mass function is given
+by
+\[f_N(n) = \Pr(N = n) = \frac{\Gamma(k+n)}{\Gamma(n+1)\Gamma(k)} p^k (1- p)^n \quad n = 0,1,2,\ldots.\]
+It can be interpreted as the probability of getting \(n\) failures before
+the \(k\)th success occurs in a sequence of independent Bernoulli trials
+with probability of success \(p\).
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-44}{}\label{exm:unlabeled-div-44}
+
+Let \(N \sim NB(k,p)\). Show that the mean, variance and moment generating
+function of the compound negative binomial distribution, denoted by
+\(\mathcal{CNB}(k,p,F_X)\), are as follows:
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  \(E[S] = \frac{k q}{p} m_1\),
+\item
+  \(Var[S] = \frac{k q}{p^2} (p m_2 + q m_1^2)\),
+\item
+  \(M_S(t) = \left( \frac{ p }{ 1 - q M_X(t) } \right)^k,\)
+\end{enumerate}
+
+where \(m_k\) be the \(k\)th moment of \(X_1\) and \(q = 1-p\).
+
+\end{example}
+
+\textbf{Solution:}
+The results follows from the properties of the negative binomial
+distribution \(N \sim NB(k,p)\):
+\[E[N] = \frac{kq}{p}, \quad Var[N] = \frac{kq}{p^2},\] and the
+moments of a compound distribution \(S\) derived in Section
+\protect\hyperlink{sectionCompoundDistribution}{2}.
+
+\textbf{Note} The compound negative binomial distribution is an appropriate
+to model the heterogeneity of the numbers of claims occurring for
+different risks. In particular, suppose that for each policy, the number
+of claims in a year has a Poisson distribution
+\(N | \lambda \sim Poisson(\lambda)\), and that the variation in \(\lambda\) across
+the portfolio can be modelled using a Gamma distribution \(G(\alpha, \lambda)\). Then
+the number of claims in the year for a policy chosen at random from the
+portfolio has a negative binomial distribution.
+
+\hypertarget{compound-binomial-distributions}{%
+\subsection{Compound binomial distributions}\label{compound-binomial-distributions}}
+
+A compound binomial distribution can be used to model a portfolio of
+policies, each of which can give rise to at most one claim.
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-45}{}\label{exm:unlabeled-div-45}
+
+Consider a portfolio of \(n\) independent and identical policies where
+there is at most one claim on each policy in a year (for e.g.~life
+insurance). Let \(p\) be the probability that a claim occurs. Explain that
+the aggregate sum \(S\) in this portfolio has a compound binomial
+distribution, denoted by \(\mathcal{CB}(n,p,F_X)\). Derive the mean,
+variance and moment generating function of \(S\).
+
+\end{example}
+
+\textbf{Solution:}
+Since \(n\) policies (lives) are independent with the probability \(p\) that
+a claim occurs, the number \(N\) of claims on the portfolio in one year
+has a binomial distribution i.e.~\(N \sim \text{bi}(n,p)\). If the sizes
+of the claims are i.i.d. random variables, independent of \(N\), then the
+total amount \(S\) claimed on this policy in one year has a compound
+binomial distribution.
+
+The mean, variance and the moment generating function of \(S\) are as
+follows: \[\begin{aligned}
+E[S] &= n p m_1, \\
+Var[S] &= np m_2 - n p^2 m_1^2, \\
+M_S(t) &= \left( q + p  M_X(t)      \right)^n,\end{aligned}\] where
+\(m_k\) be the \(k\)th moment of \(X_1\) and \(q = 1-p\).
+
+\hypertarget{the-effect-of-reinsurance}{%
+\section{The effect of reinsurance}\label{the-effect-of-reinsurance}}
+
+The effect of reinsurance arrangements on an aggregate claims
+distribution will be presented. Let \(S\) denotes the total aggregate
+claims from a risk in a given time, \(S_I\) and \(S_R\) denote the insurance
+and reinsurance aggregate claims, respectively. It follows that
+\[S = S_I + S_R.\]
+
+\hypertarget{proportional-reinsurance-1}{%
+\subsection{Proportional reinsurance}\label{proportional-reinsurance-1}}
+
+Recall that under proportional reinsurance arrangement, a fixed
+proportion \(\alpha\) is paid by the direct insurer and the remainder of
+the claim is paid by the reinsurer. It follows that
+\[S_I =  \sum_{i= 1}^N  \alpha X_i = \alpha S\] and
+\[S_R =  \sum_{i= 1}^N (1- \alpha) X_i = (1- \alpha) S,\] where \(X_i\) is
+the amount of the \(i\)th claim.
+
+\textbf{Notes}
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Both direct insurer and the reinsurer are involved in paying each
+  claim.
+\item
+  Both have unlimited liability unless a cap on the claim amount is
+  arranged.
+\end{enumerate}
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-46}{}\label{exm:unlabeled-div-46}
+
+Aggregate claims from a risk in a given time have a compound Poisson
+distribution with Poisson parameter \(\lambda = 10\) and an individual
+claim amount distribution that is a Pareto distribution,
+\(Pa(4,1)\). The insurer has effected proportional reinsurance with
+proportion retained \(\alpha = 0.8\).
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Find the distribution of \(S_I\) and \(S_R\) and their means and
+  variances.
+\item
+  Compare the variances \(Var[S_I] +Var[S_R]\) and \(Var[S]\). Comment
+  on the results obtained.
+\end{enumerate}
+
+\end{example}
+
+\textbf{Solution:}
+1. We have \[\begin{aligned}
+    S_I &= \sum_{i=1}^N \left( \alpha X_i \right) = \alpha \sum_{i=1}^N X_i = \alpha \cdot S, \\
+    S_R &= \sum_{i=1}^N \left( (1- \alpha) X_i \right) = (1- \alpha) \sum_{i=1}^N X_i = (1- \alpha) \cdot S,\end{aligned}\]
+since both insurer and reinsurer are involved in paying each claim,
+i.e.~\(Y_i = \alpha X_i\) and \(Z_i = (1- \alpha) X_i\). It follows that
+\(S_I \sim \mathcal{CP}(10,F_Y)\) and \(S_R \sim \mathcal{CP}(10,F_Z)\).
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\setcounter{enumi}{1}
+\item
+  As we can show that if \(X \sim Pa(\beta,\lambda)\), then
+  \(W = k X \sim Pa(\beta,k \lambda)\). For
+  \(X \sim Pa(4,1)\) with \(\beta = 4\) and \(\lambda = 1\), we have
+  \(Y_i \sim Pa(\beta, \alpha \cdot \lambda) = Pa(4, 0.8)\)
+  and \[\begin{aligned}
+  E[S_I] &= 10 \cdot E[Y_i] = 10   \cdot \frac{\alpha \cdot \lambda}{\beta - 1} \\
+  & = \frac{8}{3}, \\
+  Var[S_I] &=10 \cdot E[Y_i^2]  =   10 \cdot \frac{\Gamma(\beta - 2) \cdot \Gamma(1 + 2) \cdot (\alpha \cdot \lambda)^2  }{\Gamma(\beta)} \\
+   &= 10 \cdot   \frac{\Gamma(2) \cdot \Gamma(3) \cdot (\alpha \cdot \lambda)^2  }{\Gamma(4)} = 10 \cdot \frac{2!}{3!} \cdot  (0.8)^2 \\
+   &= \frac{32}{15} \end{aligned}\]
+
+  Alternatively, we can calculate by using the properties of the
+  expectation and variance as follows: \[\begin{aligned}
+  E[S_I] &= E[\alpha S] = \alpha\cdot E[S] = \alpha\cdot \lambda \cdot E[X]  = 10 \cdot 0.8 \cdot \frac{1}{3} = \frac{8}{3}, \\
+  Var[S_I] &= Var[\alpha S]  =  \alpha^2 \cdot Var[S] \\
+         &= \alpha^2 \cdot \lambda \cdot E[X^2] = \frac{32}{15} .\end{aligned}\]
+\end{enumerate}
+
+Similarly, \[\begin{aligned}
+E[S_R] &= E[(1 - \alpha) S] = (1 - \alpha)\cdot E[S] = \frac{2}{3}, \\
+Var[S_R] &= Var[(1 - \alpha) S]  =  (1 - \alpha)^2 \cdot Var[S] =  \frac{2}{15} .\end{aligned}\]
+Note that \(E[S_I] + E[S_R] = E[S]\), while
+\(Var[S_I] + Var[S_R] = \frac{34}{15} < Var[S] = \frac{10}{3}.\)
+
+\hypertarget{excess-of-loss-reinsurance-1}{%
+\subsection{Excess of loss reinsurance}\label{excess-of-loss-reinsurance-1}}
+
+Recall that under excess of loss reinsurance arrangement, the direct
+insurer has effected excess of loss reinsurance with retention level
+\(M >0\). For a claim \(X\),
+
+\begin{itemize}
+\item
+  the insurance company pays any claim in full if \(X \le M\); and
+\item
+  the reinsurer (or reinsurance company) pays the remaining amount of
+  \(X - M\) if \(X > M\).
+\end{itemize}
+
+It follows that
+
+\begin{equation} 
+\label{eq:eqnSI} S_I =  \sum_{i= 1}^N  Y_1 + Y_2 + \ldots + Y_N =  \sum_{i= 1}^N  \min(X_i,M)
+\end{equation}
+and
+\begin{equation} 
+\label{eq:eqnSR} S_R = \sum_{i= 1}^N  Z_1 + Z_2 + \ldots + Z_N  = \sum_{i= 1}^N \max(0,X_i - M), 
+\end{equation}
+where \(X_i\) is the amount of the \(i\)th claim.
+When \(N = 0\), we set \(S_I = 0\) and \(S_R = 0\).
+
+\textbf{Note} \(S_R\) can equal 0 even if \(N > 0\). This occurs when all claims
+do not exceed \(M\) and hence the insurer pays the full amounts of claims.
+
+As discussed in the previous section, the reinsurer is involved only
+claims which exceed the retention limit (a claim such that \(X > M\)).
+Such claims are called \textbf{reinsurance claims}. Taking in account of
+counting only non-zero claims, we can rewrite \(S_R\) as follows. Let
+\(N_R\) be the number of insurance (non-zero) claims for the reinsurer and
+\(W_i\) be the amount of the \(i\)th non-zero payment by the reinsurer. The
+aggregate claim amount paid by the reinsurer can be written as
+\[S_R   =  \sum_{i= 1}^{N_R} W_i.\]
+:::\{.example\}
+By using the probability generating function, show that if
+\(N \sim Poisson(\lambda)\), then the distribution
+\(N_R \sim Poisson(\lambda \pi_M)\) where \(\pi_M = \Pr(X_j > M)\).
+:::
+\textbf{Solution:}
+Define the indicator random variable \(\{I_j\}_{j=1}^\infty\), where
+\[\begin{aligned}
+        I_j = 
+    \begin{cases}
+        1 &\text{if }  X_j > M\\   
+        0 &\text{if }  X_j \le M.
+    \end{cases}\end{aligned}\] Therefore, \[N_R = \sum_{j= 1}^{N} I_j.\]
+The variable \(N_R\) has a compound distribution with its probability
+generating function \[P_{N_R}(r) = P_N[P_I(r)],\] where \(P_I\) is the
+probability generating function of the indicator random variable. It can
+be shown that \[P_I(r) = 1 - \pi_M + \pi_M r,\] where
+\(\pi_M = \Pr(I_j = 1) = \Pr(X_j > M) = 1 - F(M)\).
+
+\textbf{Note} In the above example, one can derive the distribution of \(N_R\)
+by using the moment generating function:
+\[M_{N_R}(t) = M_N(\log M_I(t)),\] where \(M_N\) and \(M_I\) are the moment
+generating functions of \(N\) and \(I\). Note also that
+\[M_I(t) = 1 - \pi_M + \pi_M Exp(t).\]
+
+\hypertarget{compound-poisson-distributions-under-excess-of-loss-reinsurance}{%
+\subsection{Compound Poisson distributions under excess of loss reinsurance}\label{compound-poisson-distributions-under-excess-of-loss-reinsurance}}
+
+Assume that aggregate claim amount \(S \sim \mathcal{CP}(\lambda,F_X)\)
+has a compound Poisson distribution. Under excess of loss reinsurance
+with retention level \(M\), it follows
+from \eqref{eq:eqnSI} and
+\eqref{eq:eqnSR} that
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  \(S_I \sim \mathcal{CP}(\lambda,F_Y),\)
+
+  where \(f_Y(x) = f_X(x)\) for \(0 < x < M\) and
+  \(\Pr(Y = M) = 1 - F_X(M)\).
+\item
+  \(S_R \sim \mathcal{CP}(\lambda,F_Z),\)
+
+  where \(F_Z(0) = F_X(M)\) and \(f_Z(x) = f_X(x+M), x > 0\).
+\item
+  Excluding zero claims,
+  \(S_R \sim \mathcal{CP}(\lambda \,( 1 - F_X(M)) , F_W),\)
+
+  where \(f_W(x) = \displaystyle{\frac{f_X(x+M)}{1- F_X(M)}}, x > 0\).
+\end{enumerate}
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-47}{}\label{exm:unlabeled-div-47}
+
+Suppose that \(S\) has a compound Poisson distribution with Poisson
+parameters \(\lambda = 10\) and the claim sizes have the following
+distribution
+
+\begin{longtable}[]{@{}lllll@{}}
+\toprule
+\(x\) & 1 & 2 & 5 & 10 \\
+\midrule
+\endhead
+\(\Pr(X = x)\) & 0.4 & 0.3 & 0.2 & 0.1 \\
+\bottomrule
+\end{longtable}
+
+The insurer enters into an excess of loss reinsurance contract with
+retention level \(M = 4\).
+
+\begin{enumerate}
+\def\labelenumi{\arabic{enumi}.}
+\item
+  Show that \(S_I \sim\mathcal{CP}(\lambda,F_Y)\).
+\item
+  Show that \(S_R \sim\mathcal{CP}(\lambda,F_Z)\).
+\item
+  By excluding zero claims, show that the \(S_R\) can also be expressed
+  as \(S_R \sim \mathcal{CP}(\lambda \, p,F_W)\) where \(p = \Pr(X > M)\).
+\item
+  Find the mean and variance of the aggregate claim amount for both
+  insurer and reinsurer.
+\end{enumerate}
+
+\end{example}
+
+\begin{example}
+\protect\hypertarget{exm:unlabeled-div-48}{}\label{exm:unlabeled-div-48}
+
+Suppose that \(S\) has a compound Poisson distribution with Poisson
+parameters \(\lambda = 40\) and the claim sizes have a Pareto distribution
+\(Pa(3,4)\). The insurer has an excess of loss reinsurance contract
+in place with retention level \(M = 2\). Find the mean and variance of the
+aggregate claim amount for both insurer and reinsurer.
+
+\end{example}
 
 \hypertarget{tutorials}{%
 \chapter{Tutorials}\label{tutorials}}
